--- a/index.html
+++ b/index.html
@@ -73,6 +73,27 @@
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+								<a href="jungle_fever.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/jungle_cover.jpg);"></a>
+							</div>
+							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+								<div class="text w-100 pl-md-3">
+									<span class="subheading">Tahiti's Hidden Wilderness</span>
+									<h2><a href="jungle_fever.html">Jungle Fever</a></h2>
+					   </ul>
+									<div class="meta">
+										<p class="mb-0">30 Sepember 2020</p>
+										<p class="mb-0">by Pirate Queen</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						</div>>
+
+
+					<div class="case">
+						<div class="row">
+							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
 								<iframe width="100%" height="420" src="https://www.youtube.com/embed/ue_2BRLfJ44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
@@ -186,7 +207,7 @@
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="inca_tral.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/SA/trail1.JPG);"></a>
+								<a href="inca_trail.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/SA/trail1.JPG);"></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 								<div class="text w-100 pl-md-3">
