--- a/iran.html
+++ b/iran.html
@@ -127,7 +127,7 @@
 
 
 
- <p>I'm writing this in 2020. Click here for a quick post sciptum on the politica situation.</p>
+ <p>I'm writing this in 2020. <a href="#postscriptum">Click here</a> for a quick post sciptum on the political situation.</p>
 
 
       <p id="Rosewater">  
@@ -141,7 +141,9 @@
 
 
 
-
+<p id="postscriptum">_______________________________________</br></br></br>It is now 2020. The world is in much more turmoil than in 2017, and in January this year, the USA assasinated a hardliner Iranian general. Shortly afterwards, Iran shot down a passenger plane, seemingly by accident, and the Minister of Foreign Affairs Zarif resigned as a result. It is perhaps the shame caused by this error that made sure Iran did not retaliate and the situation did not escalate into a war. A few months later, both countries plunged deep into the Coronavirus epidemic.
+</br></br>In 2019, many Iranians who had high hopes for Rouhani to gradually move the country in a less authoritarian direction faced a rude awakening. The government announced a tripling of the price of gas, which resulted in a wave of protests. These protests were immediately met with a violent crackdown, much sooner than those in 2009. The country got temporarily disconnected from the internet, and it served as a trial run for an intranet running some of the government's services, separated from the global network. Many believe Iran may be getting ready to disconnect permanently, much like North Korea.
+</p>
                   <div class="tag-wid
             get post-tag-container mb-5 mt-5">
               <a href="index.html"> GO BACK TO HOME PAGE </a>
