--- a/iran.html
+++ b/iran.html
@@ -73,7 +73,7 @@
           <div class="col-lg-8 ftco-animate">
           
             <h2 class="mb-3">Politics and Poetry in Iran</h2>
-            <p> <ul><li><a href="#Tehran">Tehran</a></li><li><a href="#Election">Election Fever</a></li><li><a href="Rosewater">Rosewater Dreams</a></li><li><a href="Esfahan">Art and Magic in Esfahan</a></li><li><a href="Persepolis">Majestic Persepolis</a></li><li><a href="Shiraz">Flowers and Poetry in Shiraz</a></li></ul></p>         
+            <p> <ul><li><a href="#Tehran">Tehran</a></li><li><a href="#Election">Election Fever</a></li><li><a href="Rosewater">Rosewater Dreams</a></li><li><a href="Esfahan">Art and Magic in Esfahan</a></li><li><a href="Persepolis">Majestic Persepolis</a></li><li><a href="Shiraz">Flowers and Poetry in Shiraz</a></li><li><a href="#practical">Practical Information</a></li></ul></p>         
           <p>My first flight was from Warsaw to Doha. It had to zig-zag to avoid active war zones in Eastern Ukraine and Iraq, because such times we live in. You sometimes forget how close these things are, but going to Iran there is no doubt - the political context of out times is present every hour of every day.</p>
             <p class="mb-5">
                 <img src="images/doha_flight.jpg" alt="" class="img-fluid">
@@ -93,18 +93,23 @@
                 <p class="mb-5">
                     <img src="images/iran/food.jpg" alt="" class="img-fluid">
                   </p>
-<p>transit</p>
+<p>On every subway train, there are two cars that are restricted for women only. Other cars are open to everyone but most women opt for the restricted ones. So did we. These rides were fascinating - almost every time, there were vendors selling cosmetics, underwear of hair accessories making their way through the crowd.</p>
 <p class="mb-5">
   <img src="images/iran/women_only.jpg" alt="" class="img-fluid">
 </p>
-<p>hike, money, park, forbidden books, cafe, tv ads, gallery, mossadegh's house</p>
+<p>I'm a total nerd for socialist history, so I really wanted to see Mossadegh's house. Before going over, I looked up the location. But there was no plaque, no museum, nothing. Only one of the people we talked to around there even remembered it used to be there. I suppose the current regime isn't interested in keeping that part of history. It's pretty interesting - after all, deposing Mossadegh is America's original sin in Iran. But perhaps the threat of a secular people's government is more important than fearmongering about the US?</p>
+
+<p>At one point, we went to the area where Tehran University is. The street was lined with book vendors selling forbidden books - Chomsky, atheism, all kinds of philosophy. The books were laid out on tarps. If they got word that morality police is coming, thays, wrap up the tarp with all the books inside and disapear in seconds. In a hip cafe we went to (and had an incredible drink with - that's right - mustard-ish seeds called khakshir) all of the girls had their scarves down. If police came by, they were ready to pull it up. </p>
+
+
+<p>Tehran, all in all, is a fascinating city with parks, art galleries, music clubs and great restaurants. It's very easy to get to know the people you meet, because they're open and most will speak some foreign languages. Persian has a lot of words in common with French (merci!) and I even used my broken Russian to talk to a driver at some point. And I'm sure you've heard this before but the Persians are one of the most educated people on Earth. That's very self-evident in Tehran. Much of the society lives in silent resistance to the strange regime they got stuck with and does their best to thrive in spite of it.</p>
 <p class="mb-5">
   <img src="images/iran/hike.jpg" alt="" class="img-fluid">
 </p>
 <p class="mb-5"  id="Election">
   <img src="images/iran/gallery.jpg" alt="" class="img-fluid">
 </p>
-<p>It was a time of the 2017 presidential election. We hadn't realised, when we planned the trip, that it would coincide. In fact, when it seemed for a moment that Ahmadinejad might spite Khamenei and run again we were ready to resechedule the trip altogether. But in the end, we decided things are unlikely to get heated. President Rouhani was up for reelection - and he was the "moderate" candidate, a compromise supported by reformists (even though some of them were still imprisoned). His main oponent was a hardliner - Ebrahim Raïssi, responsible, among other things, for 1988 executions of political prisoners in the war with Iraq. Rouhani's first term was a welcome relief after Ahmadinejad. The morality police let up somewhat, young women were getting away with wearing headbands instead if a full head covering, and a drying up of a major lake had been reversed. A deal with USA saw the world lift most of its trade sanctions from Iran, and even though Trump was likely to go back on it, the rest of te world wasn't. Rouhani was very much the Obama equvalent back then - nice, progressive optics and good management of the day-to-day, with the bulk of the authhoritarian machine firmly in place.<p class="mb-5">
+<p><b>ELECTION FEVER</b></br>It was a time of the 2017 presidential election. We hadn't realised, when we planned the trip, that it would coincide. In fact, when it seemed for a moment that Ahmadinejad might spite Khamenei and run again we were ready to resechedule the trip altogether. But in the end, we decided things are unlikely to get heated. President Rouhani was up for reelection - and he was the "moderate" candidate, a compromise supported by reformists (even though some of them were still imprisoned). His main oponent was a hardliner - Ebrahim Raïssi, responsible, among other things, for 1988 executions of political prisoners in the war with Iraq. Rouhani's first term was a welcome relief after Ahmadinejad. The morality police let up somewhat, young women were getting away with wearing headbands instead if a full head covering, and a drying up of a major lake had been reversed. A deal with USA saw the world lift most of its trade sanctions from Iran, and even though Trump was likely to go back on it, the rest of te world wasn't. Rouhani was very much the Obama equvalent back then - nice, progressive optics and good management of the day-to-day, with the bulk of the authhoritarian machine firmly in place.<p class="mb-5">
  
  <p>8 years before that, when Ahmadinejad was running for his second term, the situation was far more explosive. The main opponent was a true reformist - former prime minister Mir-Hossein Mousavi. Many believed in his victory, and when official results were announced - 63% to 34% - people took to the streets to denounce the elction as fraud. And they didn't let up. After days of protest, violent crackdown started. Many Iranians know someone who was killed or arrested at the time. I met a young man whose father was killed. As I'm writing this in 2020, Moussavi remains under house arrest.</p>
 
@@ -122,7 +127,8 @@
 
 <p>By the evening, Reisi supporters disappeared. The streets were full of young people holding signs either in support of Rouhani, or indicating "not going back." Some were singing anti-revolution songs that would land you in prison on any normal day. The cars were waving purple flags.</p>
 <p class="mb-5">
-        <img src="images/iran/iquitos2.jpg" alt="" class="img-fluid">
+
+  [INSERT VIDEO FOOTAGE]
       </p>
 
 
@@ -130,18 +136,113 @@
  <p>I'm writing this in 2020. <a href="#postscriptum">Click here</a> for a quick post sciptum on the political situation.</p>
 
 
-      <p id="Rosewater">  
+      <p id="Rosewater"> </br></br><b>ROSEWATER DREAMS</b></br>We took a day trip to a rosewater factory. It was a minibus, and I was the only person who didn't speak Persian. Most of the passengers were middle-aged women. Architects, doctors, professors... every single one a high achiever. It was pretty incredible. It was probably the hardest day for me in terms of heat. But the things we saw were beautiful. Fields of roses, vats of rosewater being distilled. Old buildings, waterfalls, parks. But the most fascinating part of it was our fellow passengers.
 </p>
 <p class="mb-5">
-    <img src="images/iran/amazon.jpg" alt="" class="img-fluid">
+    <img src="images/iran/rosewater.jpg" alt="" class="img-fluid">
   </p>
-<p>
-</br></p>
+
+<p>When we were on our way back to Tehran, it was already dark. At some point, one of the ladies handed the driver some music - some kind of Persian upbeat tune. Others drew the curtains on the windows so that no one can see in and... started dancing in the passage between seats. You know, dancing is illegal. This little bit of subversion felt even more significant, than drinking alcohol, listening to metal, or seeing all the forbidden books.</p>
+
+
+<p id="Esfahan"> </br></br><b>ART AND MAGIC IN ESFAHAN</b></br></p>
+
+
+<p class="mb-5">
+  <img src="images/iran/esfahan0.jpg" alt="" class="img-fluid">
+</p>
+
+<p class="mb-5">
+  <img src="images/iran/esfahan01.jpg" alt="" class="img-fluid">
+</p>
+
+<p class="mb-5">
+  <img src="images/iran/esfahan.jpg" alt="" class="img-fluid">
+</p>
+
+
+<p>Temples</p>
+<p class="mb-5">
+  <img src="images/iran/esfahan1.jpg" alt="" class="img-fluid">
+</p>
+
+<p>Markets</p>
+<p class="mb-5">
+  <img src="images/iran/art1.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/art2.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/art3.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/art4.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/art5.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/art6.jpg" alt="" class="img-fluid">
+</p>
+
+
+
+<p id="Persepolis"> </br></br><b>MAJESTIC PERSEPOLIS</b></br></p>
+
+<p class="mb-5">
+  <img src="images/iran/persepolis2.jpg" alt="" class="img-fluid">
+</p>
+
+<p class="mb-5">
+  <img src="images/iran/persepolis1.jpg" alt="" class="img-fluid">
+</p>
+
+<p class="mb-5">
+  <img src="images/iran/persepolis3.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/persepolis4.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/persepolis5.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/persepolis6.jpg" alt="" class="img-fluid">
+</p>
+<p class="mb-5">
+  <img src="images/iran/persepolis7.jpg" alt="" class="img-fluid">
+</p>
+
+
+<p id="Shiraz"> </br></br><b>FLOWERS AND POETRY IN SHIRAZ</b></br></p>
+
+<p class="mb-5">
+  <img src="images/iran/nasir.jpg" alt="" class="img-fluid">
+</p>
+
+<p class="mb-5">
+  <img src="images/iran/shiraz3.jpg" alt="" class="img-fluid">
+</p>
+
+<p class="mb-5">
+  <img src="images/iran/hafez1.jpg" alt="" class="img-fluid">
+</p>
 
 
 
 
-<p id="postscriptum">_______________________________________</br></br></br>It is now 2020. The world is in much more turmoil than in 2017, and in January this year, the USA assasinated a hardliner Iranian general. Shortly afterwards, Iran shot down a passenger plane, seemingly by accident, and the Minister of Foreign Affairs Zarif resigned as a result. It is perhaps the shame caused by this error that made sure Iran did not retaliate and the situation did not escalate into a war. A few months later, both countries plunged deep into the Coronavirus epidemic.
+
+
+
+
+<p id="practical"></p>
+<p><b>ENTRY</b></br>If you're considering going to Iran, I'm going to assume the Covid-19 pandemic is over. If it's not, please reconsider - the country was very heavily hit and official numbers may not be reliable. If the visa requirements are back to the state before Covid, then most people in the world are eligible for a visa on arrival. Notable exceptions are US and Canadian passport holders who will need to arrange a visa in advance, and Israeli passport holders who will unfortunately not be able to enter. Check your country's status here: <a href="https://en.wikipedia.org/wiki/Visa_policy_of_Iran">https://en.wikipedia.org/wiki/Visa_policy_of_Iran</a></p>
+<p><b>INTERNET</b></br>As I write this in 2020, Iran is still connected to the global internet network, but access is heavily censored. Some fear it may disconnect in the future, in favor of a national intranet, much like North Korea. There have been trial runs during last year's protests. As of now, the best way to circumvent the censorship on mobile devices appears to be Psiphon. (Best to download in advance.) On PCs, Tor remains a good choice.</p>
+<p><b>MONEY</b></br> Something one  needs to prepare for when travelling in Iran, is that the ATMs are not connected to the global bank infrastructure. So as a foreigner, you need to bring cash. You can exchange foreign cash in designated spots and with some people hanging out outside of them. But honestly, I don't recommend trying to do any of this without someone who knows their way around helping you out. You can learn the Persian numbers quickly enough, but if you're a foreigner the prices will mysteriously go up immediately, and it's pretty easy to feel lost and confused. But if you do have local friends, travelling around Iran is actually very affordable.</p>
+
+
+<p id="postscriptum">_______________________________________</br></br></br>It is now 2020. The world is in much more turmoil than in 2017, and in January this year, the USA assasinated a hardliner Iranian general. Shortly afterwards, Iran shot down a passenger plane, seemingly by accident, and the Minister of Foreign Affairs Mohammad Javad Zarif resigned as a result (but was soon reinstated). It is perhaps the shame caused by this error that made sure Iran did not retaliate and the situation did not escalate into a war. A few months later, both countries plunged deep into the Coronavirus epidemic.
 </br></br>In 2019, many Iranians who had high hopes for Rouhani to gradually move the country in a less authoritarian direction faced a rude awakening. The government announced a tripling of the price of gas, which resulted in a wave of protests. These protests were immediately met with a violent crackdown, much sooner than those in 2009. The country got temporarily disconnected from the internet, and it served as a trial run for an intranet running some of the government's services, separated from the global network. Many believe Iran may be getting ready to disconnect permanently, much like North Korea.
 </p>
                   <div class="tag-wid
