--- a/index.html
+++ b/index.html
@@ -74,6 +74,27 @@
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+								<a href="tahiti_food.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/brunch.jpeg);"></a>
+							</div>
+							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+								<div class="text w-100 pl-md-3">
+									<span class="subheading">Locally-sourced deliciousness</span>
+									<h2><a href="tahiti_food.html">Streetfood Brunch</a></h2>
+					   </ul>
+									<div class="meta">
+										<p class="mb-0">30 Sepember 2020</p>
+										<p class="mb-0">by Pirate Queen</p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						</div>>
+
+
+					<div class="case">
+						<div class="row">
+							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
 								<a href="jungle_fever.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/jungle_cover.jpg);"></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
