--- a/errata.html
+++ b/errata.html
@@ -72,198 +72,11 @@
    		<div class="container">
    			<div class="row">
    				<div class="col-md-12">
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="tahiti_food.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/brunch.jpeg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Locally-sourced deliciousness</span>
-									<h2><a href="tahiti_food.html">Streetfood Brunch</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">04 October 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						</div>>
-
-
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="jungle_fever.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/jungle_cover.jpg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Tahiti's Hidden Wilderness</span>
-									<h2><a href="jungle_fever.html">Jungle Fever</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">30 Sepember 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						</div>>
-
-
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<iframe width="100%" height="420" src="https://www.youtube.com/embed/ue_2BRLfJ44" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">First dips into snorkling (with an action cam)</span>
-									<h2>Ocean Notion</h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">25 Sepember 2020</p>
-										<p class="mb-0">by Pirate Captain</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-
-
-
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="miko.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/flag.jpeg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Our first glimpse into indigenous struggle in Polynesia</span>
-									<h2><a href="miko.html">Meeting Land Defenders</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">23 Sepember 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						</div>>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<iframe width="100%" height="420" src="https://www.youtube.com/embed/tUCneWDHoEs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Hyperlapse Video</span>
-									<h2>Morning Beach Walk</h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">21 Sepember 2020</p>
-										<p class="mb-0">by Pirate Captain</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="transit.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/flight.jpeg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">'Tis a Pirate's Life For Us</span>
-									<h2><a href="transit.html">Reclaiming 2020</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">20 Sepember 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="iran.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/iran/iran_cover.jpg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Politics and Poetry</span>
-									<h2><a href="iran.html">Iran</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">May 2017</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="rapa_nui.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/SA/easter.jpg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Loneliest Inhabited Place In The World</span>
-									<h2><a href="rapa_nui.html">Easter Island</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">December 2015</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="inca_trail.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/SA/trail1.JPG);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Mysterious Peru</span>
-									<h2><a href="inca_trail.html">Inca Trail + Iquitos</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">November 2015</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-   					<div class="case">
-   						<div class="row">
-   							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="tanzania.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/tanzania_bus.jpg);"></a>
-   							</div>
-   							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-   								<div class="text w-100 pl-md-3">
-   									<span class="subheading">Throwback to 2012</span>
-   									<h2><a href="tanzania.html">Tanzania diary</a></h2>
-			              </ul>
-   									<div class="meta">
-										   <p class="mb-0">December 2012</p>
-										   <p class="mb-0">by Pirate Queen</p>
-   									</div>
-   								</div>
-   							</div>
-   						</div>
-   					</div>
- <!---  					<div class="case">
+					<h2>We will be compiling this errata page as we discover things the </br><b>Lonely Planet guide to French Polynesia</b> </br>gets wrong:</h2>
+<p></br></br></br>1. Electric outlets. According to LP, they are all type A (North American). All that we've seen so far have been type C (European).</br></br>
+</br>2. Cost of travel. There are many ways to travel to French Polynesia that are much cheaper that those presented in the guide. They seem to believe that "budget" travel would be 120 dollars per day per person. (!?) f you want to spend time in Tahiti at about the same cost as modest living in a major city, here's how to hack it. You find accomodations on http://www.petitesannonces.pf/, or, failing that, from an independent host on AirBnB. Booking an AirBnB for a month or longer will often get you much better rates. You cook your own food and take care to buy local products as much as you can - everything that is processed is shipped thousands of miles. Get ready to eat a lot of fruit, veggies and fish. Plus baguettes (every supermarket has them fresh every morning at about half a buck) and locally produced milk. It's pretty great. You'll learn to open coconuts in no time. You can get local produce delivered from https://tahiti-localfarms.com/. Every sunday there are street vendors all around the coast selling the best grilled meat you'll ever eat and lical <i>firi firi</i> donuts. Prices vary. In Puna-Auia we've been paying an equivalent of 5 dollars for a grilled piece of chicken with delicious sauce that's enough to feed us both, and 2 bucks for a bag of <i>firi firi</i> donuts, in Papenoo it was 5 for two fried chicken legs and <i>firi firi</i> altogether.
+</br></br></br> 3. Buses. The cost of bus travel depends on how far you go and is typically an equivalent of 1.5 to 3.5 dollars paid to the driver as you come in. The travel guide says it's a flat fee of 2.5 paid at the end. Anyone else getting the impression it was written by bougie motherfuckers who mostly stick to resorts? 
+</br></br></br> 4. Integenous struggle. The guide pays very little attention to local affaires, and has a very francophone bias. The most reference to any land defender activity is on page 69 ("Inland Thrills"): "(...) at the time of research the road was closed further down the valley due to a barricade built by the area's residents. Legal proceedings were under way to ensure that the road would remain accessible both to visitors and Tahiti's hydroelectric company workers." CRINGE. </p><!---  					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
    								<a href="blog-single.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/image_2.jpg);"></a>
