--- a/index.html
+++ b/index.html
@@ -66,12 +66,40 @@
         </div>
       </div>
 	</div>
+
 	
+
 
    	<section class="ftco-section">
    		<div class="container">
    			<div class="row">
    				<div class="col-md-12">
+
+
+
+
+					<div class="case">
+						<div class="row">
+							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+								<iframe width="100%" height="420" src="https://www.youtube.com/embed/Oefcwk5TpTE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							</div>
+							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+								<div class="text w-100 pl-md-3">
+									<span class="subheading">Chill snorkeling day</span>
+									<h2>🎵 Oh shit, it's the Ocean 🎵</h2>
+					   </ul>
+									<div class="meta">
+										<p class="mb-0">5 October 2020</p>
+										<p class="mb-0">by Pirate Captain</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+
+
+
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
