--- a/jungle_fever.html
+++ b/jungle_fever.html
@@ -75,7 +75,7 @@
             <h2 class="mb-3">Tahiti's Hidden Wilderness</h2>
             <p> The big part of Tahiti is round and about 40kms in diameter. It might be the biggest island in French Polynesia, but it ain’t big. Nearly 100% of the people who live here live on the coast. The coast is lined by beaches and surf breaks, and scorched by the tropical sun. The moment you step towards the interior you may as well be on another planet.</p>
             <p class="mb-5">
-                <img src="images/jungle_fever.jpg" alt="" class="img-fluid">
+                <img src="images/jungle_cover1.jpg" alt="" class="img-fluid">
               </p>
             <p>Suddenly, you’re in majestic, high, volcanic mountains, covered in lush jungle and without a soul in sight. Most buildings there are hydro power plants. In the interior it was rainy and much colder. When we came down on the other side of the island, back to the scorching sun on the coast, it all felt like a dream. Now we know why the peaks of the mountains are always covered in clouds when you look from the coast.</p>
               <p class="mb-5">
