--- a/snorkeling.html
+++ b/snorkeling.html
@@ -66,46 +66,24 @@
         </div>
       </div>
 	</div>
-
 	
-
 
    	<section class="ftco-section">
    		<div class="container">
    			<div class="row">
    				<div class="col-md-12">
 
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="grotto.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/gecko.JPG);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Biking up and down the west coast</span>
-									<h2><a href="grottos.html">A trip to the Grottos</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">06 October 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>>
-
-
 
 
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="snorkeling.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/ocean_floor.jpeg);"></a>
+								<iframe width="100%" height="420" src="https://youtu.be/Oefcwk5TpTE" frameborder="0" allow="accelerometer; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 								<div class="text w-100 pl-md-3">
-									<span class="subheading">Snorkeling action cam videos in one spot!</span>
-									<h2><a href="snorkeling.html">🎵 Oh shit, it's the Ocean 🎵</a></h2>
+									<span class="subheading">Super cool snorkeling footage</span>
+									<h2>🎵 Oh shit, it's the Ocean 🎵</h2>
 					   </ul>
 									<div class="meta">
 										<p class="mb-0">5 October 2020</p>
@@ -116,48 +94,6 @@
 						</div>
 					</div>
 
-
-
-
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="tahiti_food.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/brunch.jpeg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Locally-sourced deliciousness</span>
-									<h2><a href="tahiti_food.html">Streetfood Brunch</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">04 October 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>>
-
-
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="jungle_fever.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/jungle_cover1.jpg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Tahiti's Hidden Wilderness</span>
-									<h2><a href="jungle_fever.html">Jungle Fever</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">30 Sepember 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
-						</div>>
 
 
 					<div class="case">
@@ -179,136 +115,7 @@
 						</div>
 					</div>
 
-
-
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="miko.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/flag.jpeg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Our first glimpse into indigenous struggle in Polynesia</span>
-									<h2><a href="miko.html">Meeting Land Defenders</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">23 Sepember 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-
 						</div>>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<iframe width="100%" height="420" src="https://www.youtube.com/embed/tUCneWDHoEs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Hyperlapse Video</span>
-									<h2>Morning Beach Walk</h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">21 Sepember 2020</p>
-										<p class="mb-0">by Pirate Captain</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="transit.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/flight.jpeg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">'Tis a Pirate's Life For Us</span>
-									<h2><a href="transit.html">Reclaiming 2020</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">20 Sepember 2020</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="iran.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/iran/iran_cover.jpg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Politics and Poetry</span>
-									<h2><a href="iran.html">Iran</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">May 2017</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="rapa_nui.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/SA/easter.jpg);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Loneliest Inhabited Place In The World</span>
-									<h2><a href="rapa_nui.html">Easter Island</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">December 2015</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="inca_trail.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/SA/trail1.JPG);"></a>
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Mysterious Peru</span>
-									<h2><a href="inca_trail.html">Inca Trail + Iquitos</a></h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">November 2015</p>
-										<p class="mb-0">by Pirate Queen</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
-   					<div class="case">
-   						<div class="row">
-   							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-   								<a href="tanzania.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/tanzania_bus.jpg);"></a>
-   							</div>
-   							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-   								<div class="text w-100 pl-md-3">
-   									<span class="subheading">Throwback to 2012</span>
-   									<h2><a href="tanzania.html">Tanzania diary</a></h2>
-			              </ul>
-   									<div class="meta">
-										   <p class="mb-0">December 2012</p>
-										   <p class="mb-0">by Pirate Queen</p>
-   									</div>
-   								</div>
-   							</div>
-   						</div>
-   					</div>
  <!---  					<div class="case">
    						<div class="row">
    							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
