--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">All Posts</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Just Stories</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Story map (low latency internet)</a></li>
 	          <li class="nav-item"><a href="videos.html" class="nav-link">ActionCam Videos</a></li>
 	          <li class="nav-item"><a href="errata.html" class="nav-link">What <b>LonelyPlanet</b> Got Wrong</a></li>
 	        </ul>
@@ -53,7 +53,8 @@
           	<div class="row">
           		<div class="col-md-7">
           			<div class="text">
-	          			<p>We are travelling around the islands of Polynesia. If you are here between 20.09.20 and 27.10.20 we are probably based in Tahiti.</p>
+						  <p>We are travelling around the islands of Polynesia.</br>
+							Last logged location: Arefaitu, Moorea</p>
 	          			<div class="mouse">
 										<a href="#" class="mouse-icon">
 											<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
@@ -67,13 +68,57 @@
       </div>
 	</div>
 
+	<section class="ftco-section">
+		<div class="container">
+			<div class="row">
+				<div class="col-md-12">
+
+<!--
+					<div class="case">
+						<div class="row">
+							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+								<a href="tepari.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/strip.png);"></a>
+							</div>
+							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+								<div class="text w-100 pl-md-3">
+									<span class="subheading">The wildest and most dangerous part of Tahiti</span>
+									<h2><a href="tepari.html">Te Pari Cliffs</a></h2>
+					   </ul>
+									<div class="meta">
+										<p class="mb-0">26 October 2020</p>
+										<p class="mb-0">by Pirate Captain</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>> -->
+
+
+
+					<div class="case">
+						<div class="row">
+							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+								<a href="moorea.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/cook_bay.jpeg);"></a>
+							</div>
+							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+								<div class="text w-100 pl-md-3">
+									<span class="subheading">An epic loop on an epic island</span>
+									<h2><a href="moorea.html">Around Moorea in 7 days</a></h2>
+					   </ul>
+									<div class="meta">
+										<p class="mb-0">20 October 2020</p>
+										<p class="mb-0">by Pirate Queen and Pirate Captain</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>>
+
+
 	
 
 
-   	<section class="ftco-section">
-   		<div class="container">
-   			<div class="row">
-   				<div class="col-md-12">
+
 
 					<div class="case">
 						<div class="row">
@@ -82,8 +127,8 @@
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 								<div class="text w-100 pl-md-3">
-									<span class="subheading">Biking up and down the west coast</span>
-									<h2><a href="grottos.html">A trip to the Grottos</a></h2>
+									<span class="subheading">Biking up and down Tahiti</span>
+									<h2><a href="grottos.html">East Coast Grottos and West Coast Waterfalls</a></h2>
 					   </ul>
 									<div class="meta">
 										<p class="mb-0">06 October 2020</p>
@@ -122,12 +167,12 @@
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="tahiti_food.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/brunch.jpeg);"></a>
+								<a href="tahiti_food.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/food_cover.jpeg);"></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 								<div class="text w-100 pl-md-3">
-									<span class="subheading">Locally-sourced deliciousness</span>
-									<h2><a href="tahiti_food.html">Streetfood Brunch</a></h2>
+									<span class="subheading">Locally-sourced and mind blowing</span>
+									<h2><a href="tahiti_food.html">The Best of Tahitan Food</a></h2>
 					   </ul>
 									<div class="meta">
 										<p class="mb-0">04 October 2020</p>
