--- a/grotto.html
+++ b/grotto.html
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-lg-8 ftco-animate">
           
-            <h2 class="mb-3"><i>Grottes de Mara'a</i> and biking up and down the West Coast</h2>
+            <h2 class="mb-3"><i>Grottes de Mara'a</i> and Faruumai waterfall</h2>
             <p class="mb-5">
                 <img src="images/bikes.jpeg" alt="" class="img-fluid">
               </p>
@@ -84,14 +84,16 @@ We went from our base in Puna'Auia at PK13 to Grottes de Mara'a at PK28.5. They 
             </p>
             
             <p class="mb-5">
-                <img src="images/red_boi.jpg" alt="" class="img-fluid">
+                <img src="images/brett_beach.JPG" alt="" class="img-fluid">
               </p>
               <p class="mb-5">
                 <img src="images/gecko.JPG" alt="" class="img-fluid">
               </p>
-            <p></p>
+            <p>A few days earlier on the west coast of Tahiti. I went to check out the Faruumai waterfall. It was incredibly peaceful and the trip gave me some initial undestanding of the Tahiti bus system. It's pretty wierd.</p>
 
-
+            <p class="mb-5">
+              <img src="images/faruumai.jpeg" alt="" class="img-fluid">
+            </p>
 
 
 
