--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">All Posts</a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">Story map (low latency internet)</a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link">Story map (slow internet)</a></li>
 	          <li class="nav-item"><a href="videos.html" class="nav-link">ActionCam Videos</a></li>
 	          <li class="nav-item"><a href="errata.html" class="nav-link">What <b>LonelyPlanet</b> Got Wrong</a></li>
 	        </ul>
