--- a/moorea.html
+++ b/moorea.html
@@ -34,8 +34,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">  </a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">  </a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link"> Home </a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link"> Story map (slow internet) </a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">  </a></li>
 	        </ul>
 	      </div>
@@ -146,7 +146,7 @@ And the views? Yeah, the views are stunning AF.
                   <p class="mb-5">
                       <img src="images/underwater_selfie.jpeg" alt="" class="img-fluid">
                     </p>    
-                    <p></p>
+                    <p>[EPIC SNORKELING FOOTAGE STILL TO COME]</p>
 
 
                     <p>Day 7: Returns are easy</p>
