--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 			<div class="row">
 				<div class="col-md-12">
 
-<!--
+
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="tepari.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/strip.png);"></a>
+								<a href="tepari.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/teparicover.jpg);"></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 								<div class="text w-100 pl-md-3">
 									<span class="subheading">The wildest and most dangerous part of Tahiti</span>
-									<h2><a href="tepari.html">Te Pari Cliffs</a></h2>
+									<h2><a href="tepari.html">Epic Climb Through Te Pari Cliffs</a></h2>
 					   </ul>
 									<div class="meta">
 										<p class="mb-0">26 October 2020</p>
@@ -91,7 +91,7 @@
 								</div>
 							</div>
 						</div>
-					</div>> -->
+					</div>> 
 
 
 
