--- a/moorea.html
+++ b/moorea.html
@@ -146,6 +146,12 @@ And the views? Yeah, the views are stunning AF.
                   <p class="mb-5">
                       <img src="images/underwater_selfie.jpeg" alt="" class="img-fluid">
                     </p>    
+                    <p class="mb-5">
+                      <img src="images/snorkelingselfie.png" alt="" class="img-fluid">
+                    </p>    
+                    <p class="mb-5">
+                      <img src="images/lagoonarium01.jpg" alt="" class="img-fluid">
+                    </p>    
                     <p>[EPIC SNORKELING FOOTAGE STILL TO COME]</p>
 
 
