--- a/moorea.html
+++ b/moorea.html
@@ -131,7 +131,9 @@ And the views? Yeah, the views are stunning AF.
               <p>Day 4: Pizza man knows how to live</p>
   
                 <p>Today wasn another calm recovery day, we biked down to the nearest village and had food truck pizza, and grabbed some basic foods and beer at a store. The pizza man was clearly a Frenchman who'd moved here decades ago and is married to a Tahitian and just kinda loving life on Moorea working his pizza stand. Honestly, we keep looking at people who managed to make life here permanent and thinking that, wow, these guys really have it figured out.</p>
-
+                <p class="mb-5">
+                  <img src="images/brett_beer.JPG" alt="" class="img-fluid"></br> As the picture might suggest, we are also getting the hang of how to live.
+                </p>  
                 <p>Day 5: We made so many friends. Most of them had 4 legs.</p>
                 <p class="mb-5">
                     <img src="images/moorea_map3.png" alt="" class="img-fluid">
