--- a/index.html
+++ b/index.html
@@ -73,6 +73,25 @@
 			<div class="row">
 				<div class="col-md-12">
 
+					<div class="case">
+						<div class="row">
+							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+								<a href="huahine.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/huahinecover.jpeg);"></a>
+							</div>
+							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+								<div class="text w-100 pl-md-3">
+									<span class="subheading">Off The Grid In The Vanilla Oasis</span>
+									<h2><a href="huahine.html">Huahine: The Secret Paradise</a></h2>
+					   </ul>
+									<div class="meta">
+										<p class="mb-0">26 October 2020</p>
+										<p class="mb-0">by Pirate Queen</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>> 
+
 
 					<div class="case">
 						<div class="row">
