--- a/tepari.html
+++ b/tepari.html
@@ -121,9 +121,9 @@
 
 
 
-              <h3><span class="icon icon-map-marker"></span><span class="text">  Moorea</span></h3>
+              <h3><span class="icon icon-map-marker"></span><span class="text"> Puna'Auia, Tahiti</span></h3>
               
-              <h3> <span class="icon-calendar"></span> 5 October 2020</h3>
+              <h3> <span class="icon-calendar"></span> 26 October 2020</h3>
 
               <a href="index.html"> GO BACK TO HOME PAGE </a>
           </div>
