--- a/transit.html
+++ b/transit.html
@@ -75,11 +75,11 @@
               <img src="images/image_1.jpg" alt="" class="img-fluid">
             </p>
             <h2 class="mb-3">'Tis a Pirate's Life for Us</h2>
-            <p>J set us up with a doctor in Berlin.</br></br>
+            <p><!--J set us up with a doctor in Berlin.</br></br> -->
                 There is a reason the flight from Paris to Pappeete (22 hours, mid-way landing in Vancouver for
                 refueling) was so cheap - you have to take a Covid test before flying. If you’re positive, you’re out. The
                 tests in Poland are a joke, so we took it as an excuse to see our Berlin friends for the first time since the
-                pandemic started. With my hacker crowd, the talk of the moment was Julian’s extradition trial, and just
+                pandemic started. <!-- With my hacker crowd, the talk of the moment was Julian’s extradition trial, and just
                 how much all the witnesses are doing great and exposing the corruption of the prosecutors. Everyone
                 agreed that none of it would matter though. Some of us still hold out hope for a win at the appeal. Some
                 think he will die in a US prison. R proposed a vague plan of Risk-Limiting Audits for upcoming
@@ -87,7 +87,7 @@
                 amount of responsibility but the math is not that complicated. (When I said that, J made a series of
                 jokes about what it means when Eva says math is not complicated.) My Cambridge friends - most of
                 whom also have been living in Berlin for the last decade are being "adults"... that is, buying houses and
-                having children. Nora and Frank are, as everyone expected, terrific new parents. It all already felt much
+                having children. Nora and Frank are, as everyone expected, terrific new parents. --> It all already felt much
                 less hopeless than the Warsaw we left behind.</br></br>
                 I imagine by the time anyone reads this, the Covid test will be a common enough experience
                 that there is no need to describe it. Suffice to say, we passed. Despite some setbacks at Tegel airport
