--- a/huahine.html
+++ b/huahine.html
@@ -53,7 +53,7 @@
           	<div class="row">
           		<div class="col-md-7">
           			<div class="text">
-	          			<p>We are travelling around the islands of Polynesia. If you are here between 20.09.20 and 27.10.20 we are probably based in Tahiti.</p>
+	          			<p>We are travelling around the islands of Polynesia.</p>
 	          			<div class="mouse">
 										<a href="#" class="mouse-icon">
 											<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
@@ -76,20 +76,24 @@
             <p class="mb-5">
                 <img src="images/huahineport.jpeg" alt="" class="img-fluid">
               </p>
-            <p>They call it "Society Islands' Best Kept Secret."
-            </br></br>
+            <p>"We grow vanilla. On Bora Bora, they grow hotels."
+            </br></br> And you know, fuck hotels. We found the most amazing, authentic, paradise island in Tahiti's own archipelago. Huahine. Only one supermarket, one cash machine, but a whole lot of everything Polynesian.
+            Huahine specializes in vanilla farms. It means that they have their own signature dish - grilled fish with vanilla sauce and... wow. We didn't think the glory of Polynesian food can get even greater. But here we are.
             </p>
-            
-            <p class="mb-5">
-                <img src="images/itidogo.jpeg" alt="" class="img-fluid">
-              </p>
+ 
               <p class="mb-5">
                 <img src="images/vanillafish.jpeg" alt="" class="img-fluid">
               </p>
-            <p></p>
-
+            <p>Like Tahiti, Huahine is secretely two islands. The more settled Huahine Nui, and the wilder, more remote Huahine Iti. We started our exploration whith a few quiet days in Huahine Iti because we needed some recovery after all the adventures on Tahiti and Moorea.
+ And it was spectacular. We were pretty much alone on this incredibly beautiful lagoon. In a bungalow that looked like a stunning lagoon grotto, decorated with sea shells and flowers. All for a fraction of a price we would pay for the same on Bora Bora, an island nearby with a lot more name recognition. The host, Caro, had several dogs (like pretty much anyone here) and one in particular, a sweet one-eyed older doggo became good friends with us.
+  He would come hang out after he did his evening rounds to check security and cuddle up to us on the lagoon porch. As Brett would say, you kinda want to keep all the dogs here but it's not like we could give them a better life than they already have.
+            </p>
             <p class="mb-5">
-              <img src="images/.jpeg" alt="" class="img-fluid">
+              <img src="images/itidogo.jpeg" alt="" class="img-fluid"></br></br>We biked around Huahine Iti, had our first taste of vanilla sauce and snorkeled, but pretty soon we grew tired of being cut off from all infrastructure.
+              So we moved to Fare, the main town on Huahine Nui. The one with the cash machine and the supermarket. There we stayed for over 2 weeks, because it was too perfect to leave. So we got diving certificates and became staples at the local bar - Huahine Yacht Club. Contrary to the name, it's not pretentious at all, and has an chill vibe (like pretty much anything Polynesian).  And yes, the top two photos on this page are taken from our favorite table at the Yaght Club. ;)
+             </p>
+            <p class="mb-5">
+              <img src="images/.jpeg" alt="" class="img-fluid"></br></br> Oh, also, Brett had a close ancounter with a baby shark in the shallows! :O
             </p>
 
 
