--- a/inca_trail.html
+++ b/inca_trail.html
@@ -34,8 +34,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">  </a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">  </a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link"> Home </a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link"> Story Map (Slow Internet) </a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">  </a></li>
 	        </ul>
 	      </div>
@@ -53,7 +53,7 @@
           	<div class="row">
           		<div class="col-md-7">
           			<div class="text">
-	          			<p>We are travelling around the islands of Polynesia. If you are here between 20.09.20 and 27.10.20 we are probably based in Tahiti.</p>
+	          			<p>We are travelling around the islands of Polynesia.</p>
 	          			<div class="mouse">
 										<a href="#" class="mouse-icon">
 											<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
@@ -117,7 +117,7 @@
 
       <p>     The most memorable part, of course, is my journey into deep jungle to take Ayahuasca. Wasn't going to. Kinda got talked into it by some random dude who took me to an intermediary who offered to take me way into a jungle to meet a shaman for at a somewhat excessive price. In hindsight, this was a terribly reckless thing to do.
 </br></br> (Ciekawostka dla polskich czytelników: pośrednik twierdził, że jeździ do niego Cejrowski na dragi. Że jeżdzi na dragi wierzę, nie wiem, czy akurat do niego.)
-</br></br> So, we took a motroboat up the river and then a smaller motorboat up a smaller river, then a canoe... Then we walked through a jungle... until we reached a village. The village had a shaman (no posing or dressing up, just a dude doing rituals). So that night, I drank the rotten tree juice (it's super foul) and spent the next 4 hours throwing up and thinking like I'm dying. No visions. Just anxiety and throwing up. The shaman was singing over me the entire time, which was pretty helpful actually. At least I could pace my breath to the singing an avoid a panic attack. The next day we made our way back to Iquitos and I was really thankful to be alive.
+</br></br> So, we took a motroboat up the river and then a smaller motorboat up a smaller river, then a canoe... Then we walked through a jungle... until we reached a village. The village had a shaman (no posing or dressing up, just a dude doing rituals). So that night, I drank the rotten tree juice (it's super foul) and spent the next 4 hours throwing up and thinking I'm dying. No visions. Just anxiety and throwing up. The shaman was singing over me the entire time, which was pretty helpful actually. At least I could pace my breath to the singing an avoid a panic attack. The next day we made our way back to Iquitos and I was really thankful to be alive.
 
 </p>
 <p class="mb-5">
