--- a/moorea.html
+++ b/moorea.html
@@ -53,7 +53,7 @@
           	<div class="row">
           		<div class="col-md-7">
           			<div class="text">
-	          			<p>We are travelling around the islands of Polynesia. If you are here between 20.09.20 and 27.10.20 we are probably based in Tahiti.</p>
+	          			<p>We are travelling around the islands of Polynesia. </p>
 	          			<div class="mouse">
 										<a href="#" class="mouse-icon">
 											<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
