--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 	        <ul class="navbar-nav ml-auto">
 	          <li class="nav-item active"><a href="index.html" class="nav-link">All Posts</a></li>
 	          <li class="nav-item"><a href="blog.html" class="nav-link">Story map (slow internet)</a></li>
-	          <li class="nav-item"><a href="videos.html" class="nav-link">ActionCam Videos</a></li>
+	          <li class="nav-item"><a href="videos.html" class="nav-link"></a></li>
 	          <li class="nav-item"><a href="errata.html" class="nav-link">What <b>LonelyPlanet</b> Got Wrong</a></li>
 	        </ul>
 	      </div>
@@ -54,7 +54,7 @@
           		<div class="col-md-7">
           			<div class="text">
 						  <p>We are travelling around the islands of Polynesia.</br>
-							Last logged location: Arefaitu, Moorea</p>
+							Last logged location: Nuku Hiva, Marquesas</p>
 	          			<div class="mouse">
 										<a href="#" class="mouse-icon">
 											<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
@@ -76,15 +76,53 @@
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+								<a href="nukuhiva.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/divingover.jpeg);"></a>
+							</div>
+							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+								<div class="text w-100 pl-md-3">
+									<span class="subheading">The Marquesas</span>
+									<h2><a href="nukuhiva.html"></a>The Dothraki Sea. And desert. And jungle.</h2>
+					   </ul>
+									<div class="meta">
+										<p class="mb-0">20 November 2020</p>
+										<p class="mb-0">by Pirate Queen</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>> 
+
+					<div class="case">
+						<div class="row">
+							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
+								<a href="diving.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/divingcover.png);"></a>
+							</div>
+							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
+								<div class="text w-100 pl-md-3">
+									<span class="subheading">Our first diving certificate</span>
+									<h2><a href="diving.html">Certified Bad Asses</a></h2>
+					   </ul>
+									<div class="meta">
+										<p class="mb-0">18 November 2020</p>
+										<p class="mb-0">by Pirate Captain and Pirate Queen</p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>> 
+
+					<div class="case">
+						<div class="row">
+							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
 								<a href="huahine.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/huahinecover.jpeg);"></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 								<div class="text w-100 pl-md-3">
-									<span class="subheading">Off The Grid In The Vanilla Oasis</span>
-									<h2><a href="huahine.html">Huahine: The Secret Paradise</a></h2>
+									<span class="subheading">Huahine, The Secret Paradise</span>
+									<h2><a href="huahine.html"></a>Off The Grid In The Vanilla Oasis</h2>
 					   </ul>
 									<div class="meta">
-										<p class="mb-0">26 October 2020</p>
+										<p class="mb-0">5 November 2020</p>
 										<p class="mb-0">by Pirate Queen</p>
 									</div>
 								</div>
@@ -142,7 +180,7 @@
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="grotto.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/brett_beach.JPG);"></a>
+								<a href="grottos.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/brett_beach.JPG);"></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 								<div class="text w-100 pl-md-3">
@@ -186,7 +224,7 @@
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<a href="tahiti_food.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/food_cover.jpeg);"></a>
+								<a href="tahiti_food.html" class="img w-100 mb-3 mb-md-0" style="background-image: url(images/vanillafish.jpeg);"></a>
 							</div>
 							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
 								<div class="text w-100 pl-md-3">
@@ -245,25 +283,6 @@
 						</div>
 
 						</div>>
-					<div class="case">
-						<div class="row">
-							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
-								<iframe width="100%" height="420" src="https://www.youtube.com/embed/tUCneWDHoEs" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
-							</div>
-							<div class="col-md-6 col-lg-6 col-xl-4 d-flex">
-								<div class="text w-100 pl-md-3">
-									<span class="subheading">Hyperlapse Video</span>
-									<h2>Morning Beach Walk</h2>
-					   </ul>
-									<div class="meta">
-										<p class="mb-0">21 Sepember 2020</p>
-										<p class="mb-0">by Pirate Captain</p>
-									</div>
-								</div>
-							</div>
-						</div>
-					</div>
 					<div class="case">
 						<div class="row">
 							<div class="col-md-6 col-lg-6 col-xl-8 d-flex">
