--- a/rapa_nui.html
+++ b/rapa_nui.html
@@ -34,8 +34,8 @@
 
 	      <div class="collapse navbar-collapse" id="ftco-nav">
 	        <ul class="navbar-nav ml-auto">
-	          <li class="nav-item active"><a href="index.html" class="nav-link">  </a></li>
-	          <li class="nav-item"><a href="blog.html" class="nav-link">  </a></li>
+	          <li class="nav-item active"><a href="index.html" class="nav-link"> Home </a></li>
+	          <li class="nav-item"><a href="blog.html" class="nav-link"> Story Map (Slow Internet) </a></li>
 	          <li class="nav-item"><a href="about.html" class="nav-link">  </a></li>
 	        </ul>
 	      </div>
@@ -53,7 +53,7 @@
           	<div class="row">
           		<div class="col-md-7">
           			<div class="text">
-	          			<p>We are travelling around the islands of Polynesia. If you are here between 20.09.20 and 27.10.20 we are probably based in Tahiti.</p>
+	          			<p>We are travelling around the islands of Polynesia.</p>
 	          			<div class="mouse">
 										<a href="#" class="mouse-icon">
 											<div class="mouse-wheel"><span class="ion-ios-arrow-round-down"></span></div>
